# SquareEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/: Axe1.fbx  Barrel1.fbx  Calibri_32.json  Calibri_32_ru.json  Config.json  EnvironmentCM.dds  EnvironmentSpecular.dds  Lamp1.fbx  Loc.json  Loc_ru.json
Code/Engine/: SConfig.h
Code/Engine/Application/: ApplicationModule.h  SAppConfig.cpp  SAppConfig.h  SApplication.h  SApplicationInterface.h  SApplicationModule.cpp  SApplicationModule.h  SApplicationTypes.h  SInputInterface.h  SInputSystem.cpp  SInputSystem.h  SLocalization.cpp  SLocalization.h  SLocalizationInterface.h
Code/Engine/Application/Windows/: SWindowsApplication.cpp  SWindowsApplication.h
Code/Engine/Core/: CoreModule.h  SCamera.h  SCore.h  SCoreModule.h  SDelegate.h  SException.h  SLogger.h  SMacros.h  SMath.h  SMathTypes.h  STypes.h  SUtils.cpp  SUtils.h
Code/Engine/Core/ThreadPool/: Fifo4.h  SThreadPool.cpp  SThreadPool.h  SThreadPoolInterface.h
Code/Engine/RenderSystem/: RenderSystemModule.h  SECSComponents.h  SFontSystem.cpp  SFontSystem.h  SRenderSystem.h  SRenderSystemInterface.h  SRenderSystemModule.cpp  SRenderSystemModule.h  SRenderSystemTypes.h  SWindowsUtils.cpp  SWindowsUtils.h
Code/Engine/RenderSystem/DX11/: SColoredSpriteRenderSystemDX11.cpp  SColoredSpriteRenderSystemDX11.h  SColoredSpriteRendererDX11.cpp  SColoredSpriteRendererDX11.h  SConstantBuffersDX11.cpp  SConstantBuffersDX11.h  SFXAARenderSystemDX11.cpp  SFXAARenderSystemDX11.h  SFrameAnimSpriteRenderSystemDX11.cpp  SFrameAnimSpriteRenderSystemDX11.h  SFrameAnimSpriteRendererDX11.cpp  SFrameAnimSpriteRendererDX11.h  SMeshManagerDX11.cpp  SMeshManagerDX11.h  SMeshRenderSystemDX11.cpp  SMeshRenderSystemDX11.h  SRenderSystemDX11.cpp  SRenderSystemDX11.h  SRenderSystemTypesDX11.cpp  SRenderSystemTypesDX11.h  SSkeletalMeshRenderSystemDX11.cpp  SSkeletalMeshRenderSystemDX11.h  STextRenderSystemDX11.cpp  STextRenderSystemDX11.h  STextureManagerDX11.cpp  STextureManagerDX11.h  STexturedSpriteRenderSystemDX11.cpp  STexturedSpriteRenderSystemDX11.h  STexturedSpriteRendererDX11.cpp  STexturedSpriteRendererDX11.h
Code/Engine/RenderSystem/Windows/: SDXShaderManager.cpp  SDXShaderManager.h  SMeshManagerWindows.cpp  SMeshManagerWindows.h  SShaderManagerWindows.cpp  SShaderManagerWindows.h  STextureManagerWindows.cpp  STextureManagerWindows.h  SUtilsWindows.cpp  SUtilsWindows.h  SWindowsUtils.cpp  SWindowsUtils.h
Code/Engine/World/: SCamera.h  SFontInterface.h  SFontSystem.cpp  SFontSystem.h  SGuiInterface.h  SGuiSystem.cpp  SGuiSystem.h  SWorld.cpp  SWorld.h  SWorldInterface.h  SWorldModule.h  WorldModule.h
Code/Samples/Assets/: Calibri_32.json  Calibri_32_ru.json  config.json
Code/Samples/Windows/HelloApplication/: HelloApplication.cpp
Code/Samples/Windows/HelloWorld/: HelloWorld.cpp
Code/Samples/Windows/SkeletalMeshSample/: SkeletalMeshSample.cpp
Code/Samples/Windows/SpritesSample/: SpritesSample.cpp
Code/Samples/Windows/StaticMeshSample/: StaticMeshSample.cpp
Code/Shaders/HLSL/: ColoredSprite2d.shader  RenderTargetFXAA.shader  ShaderUtils.hlsli  SkeletalMesh3d.shader  StaticMesh3d.shader  Text2d.shader  TexturedSprite2d.shader
Code/Tools/FontTool/: FontTool.cpp
